# bcl2fq-stats

./: .pre-commit-config.yaml  Cargo.toml  Dockerfile  README.md  fq_stat.py
.github/workflows/: ci.yml
data/: Stats.json  expected.tsv
src/: cli.rs  distance.rs  lib.rs  main.rs  models.rs  utils.rs
