[package]
name = "bcl2fq-stats"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.2.1", features = ["derive"] }
env_logger = "0.10.0"
log = "0.4.17"
rstest = "0.17.0"
serde = "1.0.159"
serde_derive = "1.0.159"
serde_json = "1.0.95"
